Contrast fixes

--- a/static/themes/dark-theme.scss
+++ b/static/themes/dark-theme.scss
@@ -202,7 +202,7 @@ a.navbar-brand img.logo.normal {
 
 .notification-info {
     background-color: #676767 !important;
-    color: #000;
+    color: #f2f2f2;
 }
 
 .notification-error {
