--- a/static/themes/default-theme.scss
+++ b/static/themes/default-theme.scss
@@ -157,7 +157,7 @@ a.navbar-brand img.logo.normal {
 
 .notification-on {
     background-color: green;
-    color: black;
+    color: #fff;
 }
 
 .notification-off {
